load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/JohnAmican/testing-codecov
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "testing-codecov",
    srcs = ["calculator.go"],
    importpath = "github.com/JohnAmican/testing-codecov",
    visibility = ["//visibility:public"],
)

go_test(
    name = "testing-codecov_test",
    srcs = ["calculator_test.go"],
    embed = [":testing-codecov"],
)

sh_binary(
    name = "buildbuddy_runner_down",
    srcs = ["buildbuddy_runner_down.sh"],
)
